# AndroidGlossExample

./: LICENSE  README.md  local.properties
app/: build.gradle
app/src/androidTest/java/com/yunzhu/glossexample/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/hs/: GlExample.hs  GlossExample.cabal  GlossTree.hs  build.sh  init.c
app/src/main/java/com/yunzhu/glossexample/: YzNativeActivity.java
app/src/main/jni/: Android.mk  Application.mk  glut-wrapper.c
app/src/main/native-import/freeglut-gles/: include
app/src/main/native-import/sysroot/: Android.mk  lib
app/src/main/res/values/: strings.xml
app/src/test/java/com/yunzhu/glossexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
