name: GlossExample
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
-- license-file: LICENSE
-- author: 
-- maintainer: 
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.8

executable libgloss-example.so
  build-depends: base, text, random, transformers, OpenGL, GLUT
  -- hs-source-dirs: src
  ghc-options: -fPIC -threaded -no-hs-main
  main-is: GlExample.hs
  -- include-dirs: src
  c-sources: init.c
  cc-options: -shared
  ld-options: -shared optl-rdynamic
-- -optl-shared
--   -fPIC 
